<resources>
    <string name="app_name">SuperApp</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="alvinarm_gmail_com">alvinarm@gmail.com</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password_not_visible">•••••••••</string>
    <string name="w">W</string>
    <string name="login">LOG IN</string>
    <string name="signup">SIGN UP</string>
    <string name="title_activity_drawer_logged_in">Drawer_logged_in</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Alvin Armstrong</string>
    <string name="nav_header_subtitle">alvinarm@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_offline_access">Offline access</string>
    <string name="menu_support_app">Support App</string>
    <string name="menu_rate_app">Rate App</string>
    <string name="menu_my_languages">My languages</string>
    <string name="menu_default_theme">Default theme</string>
    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="menu_terms_of_use">Terms of Use</string>
    <string name="menu_help_and_feedback">Help &amp; Feedback</string>
    <string name="menu_about_the_app">About the app</string>
</resources>
